--- a/.github/workflows/publish_pypi.yml
+++ b/.github/workflows/publish_pypi.yml
@@ -24,6 +24,9 @@ jobs:
       run: |
         set -e
         pip install poetry
+        pip install poetry
+        poetry env use 3.10
+        poetry install
         poetry run black --check --diff --color .
         poetry run isort --check-only .
         # poetry run pylint .
