--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -22,13 +22,12 @@ jobs:
       run: |
         set -e
         pip install poetry
+        poetry env use 3.10
+        poetry install
         poetry run black --check --diff --color .
         poetry run isort --check-only .
         # poetry run pylint .
 
-    - name: Run e2e tests
+    - name: Run tests
       run: |
-        set -e
-        poetry env use 3.10
-        poetry install
         poetry run pytest tests
