--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "io_file_validator"
-version = "0.1.3"
+version = "0.1.4"
 description = "File Validator Tool helps you validate your data with a plethora of formats"
 authors = ["Manrique Vargas <machomaxg@gmail.com>"]
 readme = "README.md"
@@ -10,8 +10,7 @@ python = "^3.10"
 validators = "^0.28.1"
 pipx = "^1.5.0"
 wheel = "*"
-pytest = "7.4.0"
-requests = "2.31.0"
+requests = "^2.31.0"
 pandera = { version = "^0.7.2", extras = ["io"] }
 
 [tool.poetry.group.dev.dependencies]
@@ -19,7 +18,7 @@ black = "*"
 pytest = "*"
 pylint = "^3.2.0"
 twine = "*"
-pydiggs = "0.1.3"
+pydiggs = "^0.1.3"
 lxml = "*"
 
 [build-system]
