--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -26,7 +26,7 @@ jobs:
         poetry install
         poetry run black --check --diff --color .
         poetry run isort --check-only .
-        # poetry run pylint .
+        poetry run pylint io_file_validator
 
     - name: Run tests
       run: |
